--- a/Game02.html
+++ b/Game02.html
@@ -134,7 +134,12 @@
                 background-color: #3e8e41;
             }
 
-
+            .chimp{
+                height:100px;
+                width:100px;
+                background-color:black;
+                position: relative;
+            }
             
         </style>
     </head>
